# XXSim

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: EXECUTION_ALGORITHM.md  stop limit formations.md  stop-limit-chart-generator.py  trailing-stop-chart-generator.py
docs/stop-limit order/: Buy-bearish-bar-formations.csv  Buy-bullish-bar-formations.csv  buy-bearish-bar-dipping-formations.csv  buy-bullish-bar-dipping-formations.csv  formations.md  sell-bearish-bar-dipping-formations.csv  sell-bearish-bar-formations.csv  sell-bullish-bar-dipping-formations.csv  sell-bullish-bar-formations.csv  stop-limit-chart-generator.py
src/: __init__.py  execution.py
src/models/: __init__.py  bar.py  execution_result.py  fill.py  order.py
test-data/stop-limit/: Buy-Bearish-Bar-Dipping-Formations.csv  Buy-Bearish-Bar-Formations.csv  Buy-Bullish-Bar-Dipping-Formations.csv  Buy-Bullish-Bar-Formations.csv  Sell-Bearish-Bar-Dipping-Formations.csv  Sell-Bearish-Bar-Formations.csv  Sell-Bullish-Bar-Dipping-Formations.csv  Sell-Bullish-Bar-Formations.csv
test-data/trailing-stop/: Buy-trailing-stop-market-Formations.csv  Sell-trailing-stop-market-Formations.csv
tests/: test_bar.py  test_execution.py  test_execution_result.py  test_fill.py  test_models.py  test_stop_limit.py  test_trailing_stop_market.py
