[project]
name = "XXSim"
version = "0.5.0"
description = "Exchange Execution Simulator - stock exchange single bar execution simulator"
authors = [{name = "Yanir Taflev", email = "yanirta+xsim@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["trade", "Algotrading", "simulation", "trading", "exchange", "stocks", "backtesting", "stock market", "execution simulator", "OHLCV", "order simulation", "finance", "trading bot", "quantitative", "algorithmic trading", "market data"]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "plotly",
    "pandas"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
